src/test/ui/traits/inductive-overflow/simultaneous.stderr
error[E0277]: the trait bound `{integer}: Combo` is not satisfied
  --> $DIR/simultaneous.rs:18:11
   |
LL |     is_ee(4);
   |     ----- ^ the trait `Combo` is not implemented for `{integer}`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `is_ee`
  --> $DIR/simultaneous.rs:13:13
   |
LL | fn is_ee<T: Combo>(t: T) {
   |             ^^^^^ required by this bound in `is_ee`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
